--- a/windows/PhotobookNet/PhotobookNet.csproj
+++ b/windows/PhotobookNet/PhotobookNet.csproj
@@ -21,13 +21,27 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Content Include="Assets\SplashScreen.scale-200.png" />
-		<Content Include="Assets\LockScreenLogo.scale-200.png" />
-		<Content Include="Assets\Square150x150Logo.scale-200.png" />
-		<Content Include="Assets\Square44x44Logo.scale-200.png" />
-		<Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-		<Content Include="Assets\StoreLogo.png" />
-		<Content Include="Assets\Wide310x150Logo.scale-200.png" />
+		<Content Include="Assets\SplashScreen.scale-200.png">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Assets\LockScreenLogo.scale-200.png">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Assets\Square150x150Logo.scale-200.png">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Assets\Square44x44Logo.scale-200.png">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Assets\StoreLogo.png">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Assets\Wide310x150Logo.scale-200.png">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -77,11 +91,10 @@
 	</PropertyGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Exec Command="xcopy /y /d $([MSBuild]::NormalizeDirectory('$(SolutionDir)', '_build', '$(Platform)', '$(Configuration)'))\*.dll $(OutDir)" />
-		<Exec Command="xcopy /y /d $(SolutionDir)..\..\PB\build-$(Platform)\$(Configuration)\*.dll $(OutDir) " />
-		<Exec Command="xcopy /y $(SolutionDir)..\..\vcpkg\installed\$(Platform)-windows\debug\bin\*.dll $(OutDir)" />
+		<Exec Command="xcopy /y /d $(SolutionDir)..\PB\build-$(Platform)\$(Configuration)\*.dll $(OutDir) " />
+		<Exec Command="xcopy /y $(SolutionDir)..\vcpkg\installed\$(Platform)-windows\debug\bin\*.dll $(OutDir)" />
 		<Exec Command="xcopy /y /d $([MSBuild]::NormalizeDirectory('$(SolutionDir)', '_build', '$(Platform)', '$(Configuration)'))\*.dll $(OutDir)\AppX\" />
-		<Exec Command="xcopy /y /d $(SolutionDir)..\..\PB\build-$(Platform)\$(Configuration)\*.dll $(OutDir)\AppX\" />
-		<Exec Command="xcopy /y $(SolutionDir)..\..\vcpkg\installed\$(Platform)-windows\debug\bin\*.dll $(OutDir)\AppX\" />
-		<Exec Command="xcopy /y /d $(SolutionDir)Assets\*.png $(OutDir)\AppX\Assets\" />
+		<Exec Command="xcopy /y /d $(SolutionDir)..\PB\build-$(Platform)\$(Configuration)\*.dll $(OutDir)\AppX\" />
+		<Exec Command="xcopy /y $(SolutionDir)..\vcpkg\installed\$(Platform)-windows\debug\bin\*.dll $(OutDir)\AppX\" />
 	</Target>
 </Project>
