dev: Replace the old printDebug with spdlog.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -46,6 +46,7 @@ find_package(thread-pool CONFIG REQUIRED)
 find_package(unofficial-libharu CONFIG REQUIRED)
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
+find_package(spdlog CONFIG REQUIRED)
 
 include_directories(third-party/podofo-build/include)
 include(third-party/windows/pdfium/PDFiumConfig.cmake)
@@ -168,7 +169,8 @@ target_link_libraries(${PBLIB_LIBRARY_NAME} PRIVATE
     dp::thread-pool
     unofficial::libharu::hpdf
     unofficial::sqlite3::sqlite3
-    nlohmann_json::nlohmann_json)
+    nlohmann_json::nlohmann_json
+    spdlog::spdlog)
 
 set_target_properties(${PBLIB_LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
@@ -207,6 +209,7 @@ target_link_libraries(${PBLIB_TESTS_LIBRARY_NAME} PRIVATE
     unofficial::sqlite3::sqlite3
     bcrypt
     nlohmann_json::nlohmann_json
+    spdlog::spdlog
     ${CMAKE_CURRENT_SOURCE_DIR}/third-party/podofo-build/lib/${CMAKE_GENERATOR_PLATFORM}/Debug/podofo.lib
     ${PBLIB_LIBRARY_NAME})
 
