--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -77,12 +77,12 @@ jobs:
         # This is the default path to the CMakeLists.txt along side the
         # CMakePresets.json. Change if you need have CMakeLists.txt and CMakePresets.json
         # located elsewhere.
-        cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+        cmakeListsTxtPath: '${{ github.workspace }}/PB/CMakeLists.txt'
 
         # This is the name of the CMakePresets.json's configuration to use to generate
         # the project files. This configuration leverages the vcpkg.cmake toolchain file to
         # run vcpkg and install all dependencies specified in vcpkg.json.
-        configurePreset: 'pb-console-debug'
+        configurePreset: 'pblib-debug'
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
