build: Add the skia library.

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -51,10 +51,10 @@ jobs:
         vcpkgJsonGlob: '**/windows/vcpkg.json'
 
     - name: vcpkg install x64
-      run: vcpkg\vcpkg.exe install boost-program-options:x64-windows opencv:x64-windows boost-uuid:x64-windows expat:x64-windows brotli:x64-windows inih:x64-windows magic-enum:x64-windows exiv2:x64-windows gtest:x64-windows dp-thread-pool:x64-windows libharu:x64-windows sqlite3:x64-windows nlohmann-json:x64-windows boost-bimap:x64-windows spdlog:x64-windows inja:x64-windows
+      run: vcpkg\vcpkg.exe install boost-program-options:x64-windows opencv:x64-windows boost-uuid:x64-windows expat:x64-windows brotli:x64-windows inih:x64-windows magic-enum:x64-windows exiv2:x64-windows gtest:x64-windows dp-thread-pool:x64-windows libharu:x64-windows sqlite3:x64-windows nlohmann-json:x64-windows boost-bimap:x64-windows spdlog:x64-windows inja:x64-windows skia:x64-windows
 
     - name: vcpkg install ARM64
-      run: vcpkg\vcpkg.exe install boost-program-options:arm64-windows opencv:arm64-windows boost-uuid:arm64-windows expat:arm64-windows brotli:arm64-windows inih:arm64-windows magic-enum:arm64-windows exiv2:arm64-windows gtest:arm64-windows dp-thread-pool:arm64-windows libharu:arm64-windows sqlite3:arm64-windows nlohmann-json:arm64-windows boost-bimap:arm64-windows spdlog:arm64-windows inja:arm64-windows
+      run: vcpkg\vcpkg.exe install boost-program-options:arm64-windows opencv:arm64-windows boost-uuid:arm64-windows expat:arm64-windows brotli:arm64-windows inih:arm64-windows magic-enum:arm64-windows exiv2:arm64-windows gtest:arm64-windows dp-thread-pool:arm64-windows libharu:arm64-windows sqlite3:arm64-windows nlohmann-json:arm64-windows boost-bimap:arm64-windows spdlog:arm64-windows inja:arm64-windows skia:arm64-windows
     - name: vcpkg integrate install
       run: vcpkg\vcpkg.exe integrate install
 
