--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -45,6 +45,7 @@ find_package(unofficial-sqlite3 CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(inja CONFIG REQUIRED)
+find_package(unofficial-skia CONFIG REQUIRED)
 
 include_directories(third-party/podofo-build/include)
 include(third-party/windows/pdfium/PDFiumConfig.cmake)
@@ -59,6 +60,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     include/pb/Config.h
     include/pb/BasicSVGModel.h
     include/pb/DataManager.h
+    include/pb/DrawingService.h
     include/pb/Enums.h
     include/pb/export/ExportLogic.h
     include/pb/export/Html.h
@@ -118,6 +120,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     src/Command.cpp
     src/Config.cpp
     src/DataManager.cpp
+    src/DrawingService.cpp
     src/Enums.cpp
     src/ExportLogic.cpp
     src/FileMapper.cpp
@@ -175,7 +178,8 @@ target_link_libraries(${PBLIB_LIBRARY_NAME} PRIVATE
     unofficial::sqlite3::sqlite3
     nlohmann_json::nlohmann_json
     spdlog::spdlog
-    pantor::inja)
+    pantor::inja
+    unofficial::skia::skia)
 
 set_target_properties(${PBLIB_LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
@@ -217,6 +221,7 @@ target_link_libraries(${PBLIB_TESTS_LIBRARY_NAME} PRIVATE
     nlohmann_json::nlohmann_json
     spdlog::spdlog
     pantor::inja
+    unofficial::skia::skia
     ${CMAKE_CURRENT_SOURCE_DIR}/third-party/podofo-build/lib/${CMAKE_GENERATOR_PLATFORM}/Debug/podofo.lib
     ${PBLIB_LIBRARY_NAME})
 
