--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -23,8 +23,14 @@ if (STATIC_CHECK)
     set(CMAKE_CXX_CLANG_TIDY "clang-tidy;-checks=*")
 endif()
 
-set(PBLIB_LIBRARY_NAME pblib-${CMAKE_GENERATOR_PLATFORM})
-set(PBLIB_TESTS_LIBRARY_NAME pbtests-${CMAKE_GENERATOR_PLATFORM})
+if (CMAKE_GENERATOR_PLATFORM STREQUAL "")
+    set(PB_PLATFORM ${CMAKE_SYSTEM_NAME})
+else()
+    set(PB_PLATFORM ${CMAKE_GENERATOR_PLATFORM})
+endif()
+
+set(PBLIB_LIBRARY_NAME pblib-${PB_PLATFORM})
+set(PBLIB_TESTS_LIBRARY_NAME pbtests-${PB_PLATFORM})
 set(unofficial-skia_FOUND TRUE)
 
 if (ANDROID)
@@ -245,12 +251,12 @@ target_link_libraries(${PBLIB_TESTS_LIBRARY_NAME} PRIVATE
     ${PBLIB_LIBRARY_NAME})
 
 if(NOT ${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
-add_custom_command(TARGET ${PBLIB_TESTS_LIBRARY_NAME} POST_BUILD
-COMMAND ${CMAKE_COMMAND} -E copy_directory
-    "${CMAKE_CURRENT_SOURCE_DIR}/third-party/podofo-build/lib/${CMAKE_GENERATOR_PLATFORM}/Debug"
-    "${CMAKE_CURRENT_SOURCE_DIR}/build-${CMAKE_GENERATOR_PLATFORM}/Debug/")
+    add_custom_command(TARGET ${PBLIB_TESTS_LIBRARY_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+        "${CMAKE_CURRENT_SOURCE_DIR}/third-party/podofo-build/lib/${CMAKE_GENERATOR_PLATFORM}/Debug"
+        "${CMAKE_CURRENT_SOURCE_DIR}/build-${CMAKE_GENERATOR_PLATFORM}/Debug/")
 
-add_custom_command(TARGET ${PBLIB_LIBRARY_NAME} POST_BUILD
-COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/pb-assets"
-    "${CMAKE_CURRENT_SOURCE_DIR}/build-${CMAKE_GENERATOR_PLATFORM}/")
+    add_custom_command(TARGET ${PBLIB_LIBRARY_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/pb-assets"
+        "${CMAKE_CURRENT_SOURCE_DIR}/build-${CMAKE_GENERATOR_PLATFORM}/")
 endif()
