--- a/windows/PhotobookNet/PhotobookNet.csproj
+++ b/windows/PhotobookNet/PhotobookNet.csproj
@@ -63,7 +63,7 @@
 	<PropertyGroup>
 		<CsWinRTIncludes>PhotobookRuntimeComponent</CsWinRTIncludes>
 		<CsWinRTGeneratedFilesDir>$(OutDir)</CsWinRTGeneratedFilesDir>
-		<RunPostBuildEvent>Always</RunPostBuildEvent>
+		<RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\PhotobookRuntimeComponent\PhotobookRuntimeComponent.vcxproj" />
@@ -90,7 +90,7 @@
 		<HasPackageAndPublishMenu>true</HasPackageAndPublishMenu>
 	</PropertyGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="xcopy /y /d $([MSBuild]::NormalizeDirectory('$(SolutionDir)', '_build', '$(Platform)', '$(Configuration)'))\*.dll $(OutDir)" />
+		<Exec Command="xcopy /y /d $([MSBuild]::NormalizeDirectory('$(SolutionDir)', '_build', '$(Platform)', '$(Configuration)'))\*.dll $(OutDir)&#xD;&#xA;xcopy /y /s /e $(SolutionDir)..\PB\pb-assets $(OutDir)\AppX" />
 		<Exec Command="xcopy /y /d $(SolutionDir)..\PB\build-$(Platform)\$(Configuration)\*.dll $(OutDir) " />
 		<Exec Command="xcopy /y $(SolutionDir)..\vcpkg\installed\$(Platform)-windows\debug\bin\*.dll $(OutDir)" />
 		<Exec Command="xcopy /y /d $([MSBuild]::NormalizeDirectory('$(SolutionDir)', '_build', '$(Platform)', '$(Configuration)'))\*.dll $(OutDir)\AppX\" />
