--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -73,6 +73,7 @@ include_directories(${CMAKE_BINARY_DIR})
 add_library(${PBLIB_LIBRARY_NAME} STATIC
     include/pb/AspectRatio.h
     include/pb/util/IteratorWithState.h
+    include/pb/CollageMakerJob.h
     include/pb/CollageLibraryAssistant.h
     include/pb/Command.h
     include/pb/Config.h
@@ -138,6 +139,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
 
     src/CollageLibraryAssistant.cpp
     src/Command.cpp
+    src/CollageMakerJob.cpp
     src/CollageThumbnailsMakerJob.cpp
     src/CollageManager.cpp
     src/Config.cpp
