--- a/windows/PhotobookNet/PhotobookNet.csproj
+++ b/windows/PhotobookNet/PhotobookNet.csproj
@@ -49,6 +49,7 @@
 		<PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.0.7" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240404000" />
+		<PackageReference Include="WindowsDisplayAPI" Version="1.3.0.13" />
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
 
